文本库添加
Signed-off-by: 星宇 鞠 <1326603527@qq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,18 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".TextLibraryActivity"
+            android:label="文本库"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".TextLibraryDetailActivity"
+            android:label="文本详情"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
