--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,12 @@
             android:name=".AudioLibraryActivity"
             android:label="音频库"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+
+        <!-- 添加设置活动 -->
+        <activity
+            android:name=".SettingsActivity"
+            android:label="设置"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
     </application>
 
 </manifest>
