--- a/.github/workflows/scancode.yml
+++ b/.github/workflows/scancode.yml
@@ -1,12 +1,7 @@
 name: ScanCode License Compliance Scan
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  # 也可以手动触发工作流（在GitHub网页点击运行）
-  workflow_dispatch:
+  workflow_dispatch: # 为了方便，先只保留手动触发
 
 jobs:
   scan:
@@ -16,22 +11,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ScanCode Toolkit
-        # 使用官方推荐的Action来运行ScanCode
-        uses: nexB/scancode-action@v3.1.2
+        # 核心修改：使用固定的提交哈希 e46d127
+        uses: nexb/scancode-action@e46d127
         with:
-          # 扫描输出格式和路径
           output: 'scan-results'
-          format: 'html,json,spdx-json'
-          # 您关心的扫描参数
+          format: 'html' # 首次扫描，先只生成HTML报告以加快速度
           license: true
           copyright: true
-          # 忽略一些无关的目录，加快扫描
-          ignore: '*.min.js,*.min.css,*.pyc,__pycache__,.git,.github,node_modules'
 
       - name: Upload Scan Results as Artifact
-        # 将扫描结果文件打包，供您下载
         uses: actions/upload-artifact@v4
         with:
           name: scan-results
           path: scan-results/
-          retention-days: 7
