--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,10 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
+        <activity
+            android:name=".PlaylistDetailActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+
         <!-- FileProvider配置，用于相机拍照 -->
         <provider
             android:name="androidx.core.content.FileProvider"
